Fixed essays li on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -748,19 +748,28 @@ h6 {
 /* MOBILE > ESSAYS */
 
 .essays {
-	padding-bottom: 6vw;
+	padding-bottom: 14vw;
 }
 
 .essays ul {
-	padding-top: 10vw;
-}
+/*	padding-top: 10vw;
+*/}
 
 .essays li {
-	padding: 2vw 2vw 14vw 2vw;	
+	padding: 4vw 4vw 14vw 4vw;	
 	margin: 0;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 	width: 100% !important;
+	background-color: white;
+	box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.05);
+	opacity: 1;
+
 }
+
+.essays li:hover {
+/*	background-color: transparent;
+	box-shadow: none;
+*/}
 
 .essays li:nth-child(n+4) {
 	display: none;
